# dense-arrays

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
benchmarks/: README.md  benchmarks_double.csv  main.py  multiple_promoters.csv  side_bias_both.csv  size_bias_0_control.csv  size_bias_0_solver.csv  size_bias_1_control.csv  size_bias_1_solver.csv  size_bias_2_control.csv  size_bias_2_solver.csv  size_bias_3_control.csv  size_bias_3_solver.csv  size_bias_4_control.csv  size_bias_4_solver.csv  size_bias_5_control.csv  size_bias_5_solver.csv  size_bias_6_control.csv  size_bias_6_solver.csv  size_bias_7_control.csv  size_bias_7_solver.csv  size_bias_8_control.csv  size_bias_8_solver.csv  size_bias_9_control.csv  size_bias_9_solver.csv  sols.csv  topsols10_0_control_Gurobi.csv  topsols10_0_solver.csv  topsols10_0_solver_CBC.csv  topsols10_0_solver_SCIP.csv  topsols10_1_control.csv  topsols10_1_solver_CBC.csv  topsols10_1_solver_Gurobi.csv  topsols10_1_solver_SCIP.csv  topsols10_2_control.csv  topsols10_2_solver_CBC.csv  topsols10_2_solver_Gurobi.csv  topsols10_2_solver_SCIP.csv
docs/: api.md  index.md
figures/: README.md  plot_control.py  plot_multiple.py  plot_overlap_bias.py  plot_perf.py  plot_repr.py  plot_side_bias.py  plot_size_bias.py
src/dense_arrays/: __init__.py  main.py  optimize.py
tests/: test_optimize.py
