[project]
name = "dense-arrays"
version = "0.1.0"
description = "A library to create densely packed DNA arrays from motifs"
authors = [
    {name = "Virgile Andreani", email = "andreani@bu.edu"},
]
dependencies = [
    "numpy>=1.25.2",
    "ortools>=9.7.2996",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "pytest>=7.4.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["ALL"]
ignore = [
    # Commas something
    "COM812",
    # Implicitly concatenated string literals on one line
    # (does not work well with ruff format)
    "ISC001",
    # Unnecessary assignment to return
    "RET504",
    # Commented code
    "ERA001",
    # Copyright stuff
    "CPY001",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["ANN201", "D103", "S101", "PLR2004", "FBT001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.lint]
preview = true
